# cargo-crown

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: rust.yml
src/: common.rs  main.rs  trace_in_no_trace.rs  unrooted_must_root.rs
tests/: compile_test.rs
tests/ui/: trace_in_no_trace_composable_ok.rs  trace_in_no_trace_composable_works.rs  trace_in_no_trace_composable_works.stderr  trace_in_no_trace_ok.rs  trace_in_no_trace_primitive.rs  trace_in_no_trace_primitive.stderr  trace_in_no_trace_works.rs  trace_in_no_trace_works.stderr  unrooted_must_root_ok.rs  unrooted_must_root_parameter.rs  unrooted_must_root_parameter.stderr  unrooted_must_root_return_type.rs  unrooted_must_root_return_type.stderr  unrooted_must_root_struct_field.rs  unrooted_must_root_struct_field.stderr
