[package]
name = "cargo-crown"
authors = ["The Servo Project Developers"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dev-dependencies]
compiletest_rs = { version = "0.10", features = ["tmp"] }

[features]
default = ["unrooted_must_root_lint", "trace_in_no_trace_lint"]
unrooted_must_root_lint = []
trace_in_no_trace_lint = []

[dependencies]
#clippy_utils = { git = "https://github.com/rust-lang/rust-clippy.git", tag = "rust-1.69.0" }

[package.metadata.rust-analyzer]
# This crate uses #![feature(rustc_private)]
rustc_private = true
